--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-tailwind-boilerplate",
+  "name": "vite-bootstrap-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
+    "bootstrap": "^5.2.0",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.12",
     "postcss-nested": "^5.0.6",
-    "tailwindcss": "^3.0.23",
-    "vite": "^2.9.1",
+    "sass": "^1.54.8",
+    "vite": "^2.9.15",
     "vite-plugin-live-reload": "^2.1.0"
-  }
+  },
+  "dependencies": {}
 }
